src/objects/SFDC_Employee__c.object
<CustomObject>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Man</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Binary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transgender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intersex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Spirit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gender Non-Conforming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_Services__c</fullName>
        <label>Global Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gym_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gym Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height (feet/inches)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <label>Home Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Email__c</fullName>
        <label>Personal Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Home_Trip__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box off if employee qualifies for a flight home.</inlineHelpText>
        <label>Home Trip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Trip_location__c</fullName>
        <description>Where is the home trip applicable to</description>
        <label>Home Trip location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_Time_Reports__c</fullName>
        <inlineHelpText>For employees paid hourly, based on on FB time reports</inlineHelpText>
        <label>Hourly Rate (Time Reports)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Per_Pay_Period__c</fullName>
        <label>Hours Per Pay Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Per_Week_del__c</fullName>
        <inlineHelpText>40 Hours is full time employee</inlineHelpText>
        <label>Old Hours Per Week</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INC__c</fullName>
        <label>INC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Insurance_Beneficiary__c</fullName>
        <label>Insurance Beneficiary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Provider__c</fullName>
        <label>Medical Insurance Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Aetna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bharti AXA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPHC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigna</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsAssistant__c</fullName>
        <label>IsAssistant</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JPG__c</fullName>
        <label>JPG</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Function</label>
        <referenceTo>SFDC_Job_Function__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>R00N30000001eUPQEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L8_start_date__c</fullName>
        <label>L8 start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOCAL_EMERGENCY_CONTACT__c</fullName>
        <description>Local emergency contact, primarily for employees in country offices</description>
        <label>LOCAL EMERGENCY CONTACT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_1_Proficiency__c</fullName>
        <label>Language 1 Proficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Fluent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proficient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_2_Proficiency__c</fullName>
        <label>Language 2 Proficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Fluent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proficient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_3_Proficiency__c</fullName>
        <label>Language 3 Proficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Fluent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proficient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_Spoken_2__c</fullName>
        <label>Language Spoken 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Spoken_3__c</fullName>
        <label>Language Spoken 3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Spoken_4__c</fullName>
        <label>Language Spoken 4</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages_Spoken__c</fullName>
        <label>Language Spoken 1</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Review_Date__c</fullName>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loaded_Daily_Rate__c</fullName>
        <formula>(Annual_Salary_in_USD__c /(260* Per_Week_Hours__c /40))* (1+0.32)*(1+0.59)*(1+0.11)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual Salary over 260 working days, with 32% Fringe, 59% Overhead, 11% G&amp;A</inlineHelpText>
        <label>Loaded Daily Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_Emerg_Cont_Country_of_Residence__c</fullName>
        <label>Local Emerg Cont Country of Residence</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Britain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gambia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guatemala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haiti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iceland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Emergency_Contact_Email__c</fullName>
        <description>Email address for local emergency contact</description>
        <label>Local Emergency Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Local_Emergency_Contact_Phone__c</fullName>
        <description>Phone number for local emergency contact</description>
        <label>Local Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Local_Emergency_Contact_Relationship__c</fullName>
        <description>Relationship to employee for local emergency contact</description>
        <label>Local Emergency Contact Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Significant Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Emergency_Contact_next_of_kin__c</fullName>
        <label>Local Emergency Contact next of kin?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Loaded_Daily_Rate__c</fullName>
        <description>Calculates the Daily loaded rate in local currency</description>
        <formula>Loaded_Daily_Rate__c*Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Loaded Daily Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Unloaded_Daily_Rate__c</fullName>
        <description>Calculates the Unloaded Daily Rate in local currency</description>
        <formula>Unloaded_Daily_Rate__c*Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Unloaded Daily Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mail_Drop__c</fullName>
        <label>Mail Drop</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Communications__c</fullName>
        <label>Marketing &amp; Communications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Med_Type__c</fullName>
        <label>Medical Insurance Type</label>
        <picklist>
            <picklistValues>
                <fullName>PPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Conditions_Allergies__c</fullName>
        <label>Medical Conditions/ Allergies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Permission__c</fullName>
        <label>Medical Permission</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Plan_Coverage_Type__c</fullName>
        <label>Medical Plan Coverage Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Medical Insurance Member ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gusto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Myanmar__c</fullName>
        <label>Myanmar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCI_No__c</fullName>
        <label>OCI No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops__c</fullName>
        <label>Ops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Org_Unit__c</fullName>
        <label>Org Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DevOps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Passport_2__c</fullName>
        <label>Passport No 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Expiration_Date_2__c</fullName>
        <label>Passport Expiration Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Expiration_Date__c</fullName>
        <label>Passport Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_No__c</fullName>
        <label>Passport No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayPal_User_ID__c</fullName>
        <description>This field is to store employee PayPal User IDs if that is the method of payment Dimagi uses for them</description>
        <inlineHelpText>This field is to store employee PayPal User IDs if that is the method of payment Dimagi uses for them</inlineHelpText>
        <label>PayPal User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Level__c</fullName>
        <label>Pay Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pay_Rate__c</fullName>
        <label>Pay Rate Per Pay Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Update_Notes__c</fullName>
        <description>Only needed for Pay updates</description>
        <label>Pay Update Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Frequency__c</fullName>
        <label>Payroll Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Semi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payroll_Notes__c</fullName>
        <label>Last Pay Update Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pension_Plan__c</fullName>
        <label>Pension Plan</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Per_Week_Hours__c</fullName>
        <inlineHelpText>40 Hours is full time employee</inlineHelpText>
        <label>Hours Per Week</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Phone_Number__c</fullName>
        <label>Personal Phone (with Country Code)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Office Phone (with Country Code)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_No__c</fullName>
        <label>Medical Benefit Policy No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Date__c</fullName>
        <label>Position Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_ID__c</fullName>
        <label>Position ID</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Re_Hire_Date__c</fullName>
        <description>Use this field if you are re-hiring a previous Dimagi employee.</description>
        <label>Re-Hire Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving__c</fullName>
        <label>Reason for Leaving</label>
        <picklist>
            <picklistValues>
                <fullName>Lack of career development/alignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary and/or benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved countries/cities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t feel valued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t enjoy work/not challenging enough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family situation changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Red_Form_Filled_Date__c</fullName>
        <label>Red Form Filled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Regular_Medication__c</fullName>
        <label>Regular Medication</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Religion_Impact__c</fullName>
        <description>Does your religion/faith have any impact on your healthcare or travel ability?</description>
        <inlineHelpText>Does your religion/faith have any impact on your healthcare or travel ability?</inlineHelpText>
        <label>Religion Impact on healthcare or travel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Roth_401K_Deduction_or__c</fullName>
        <label>Roth 401K Deduction ($ or %)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001eUPVEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SI_Type__c</fullName>
        <label>SI Type</label>
        <picklist>
            <picklistValues>
                <fullName>BizDev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSN_PAN_ID_Number__c</fullName>
        <label>SSN/PAN/ID Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Annual Salary (local)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Manager__c</fullName>
        <label>Secondary Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Sup__c</fullName>
        <label>Section Sup</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature_on_File__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dimagi has electronic copy of employee&apos;s signature on file</description>
        <label>Signature on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_Travel_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed Travel Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skype_ID__c</fullName>
        <label>Skype ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Skills__c</fullName>
        <label>Special Skills</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_Tax_Withholding__c</fullName>
        <label>State Tax Withholding</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Options__c</fullName>
        <label>Stock Options</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Value_Day_1__c</fullName>
        <label>Stock Value (Day 1)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Functional_Team__c</fullName>
        <label>Sub Functional Team</label>
        <picklist>
            <picklistValues>
                <fullName>GS-Func</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech-Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech-SaaS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech-Product - DevOps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD-Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD-Pre-Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD-NIH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD-B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD-Self Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BizOps-Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BizOps-COps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BizOps-Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BizOps-Business Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POps-Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POps-Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POps-Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Mkting-TOFU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Mkting-MOFU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Mkting-BOFU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Unit__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Global Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor_Emp_ID__c</fullName>
        <label>Supervisor Emp ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Swift_Code_IFSC_Code__c</fullName>
        <label>Swift Code/IFSC Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMP_Annual_Local_Salary__c</fullName>
        <description>TEMPORARY FOR OPS During 8/2016 Payroll Transition</description>
        <inlineHelpText>TEMPORARY FOR OPS During 8/2016 Payroll Transition</inlineHelpText>
        <label>TEMP Annual Local Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMP_Pay_Rate_Per_Pay_Period__c</fullName>
        <description>TEMPORARY FOR OPS during 8/2016 pay updates</description>
        <inlineHelpText>TEMPORARY FOR OPS during 8/2016 pay updates</inlineHelpText>
        <label>TEMP Pay Rate Per Pay Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Address_City__c</fullName>
        <label>Tax Address City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Address_Country__c</fullName>
        <label>Tax Address Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Address_State__c</fullName>
        <label>Tax Address State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Address_Street__c</fullName>
        <label>Tax Address Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Address_Zip_Postal_Code__c</fullName>
        <label>Tax Address Zip/Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Number__c</fullName>
        <label>Tax Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>